[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/tepbackground.webp" type="Texture" id=1]
[ext_resource path="res://assets/SuoGrotesque-mL0B2.otf" type="DynamicFontData" id=2]
[ext_resource path="res://landingpage/landing.gd" type="Script" id=3]
[ext_resource path="res://landingpage/LogIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://landingpage/SignUp.tscn" type="PackedScene" id=5]

[sub_resource type="VisualShaderNodeColorOp" id=4]
default_input_values = [ 0, Vector3( 10, 10, 10 ), 1, Vector3( 0, 0, 0 ) ]

[sub_resource type="VisualShader" id=2]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// ColorOp:2
	vec3 n_in2p0 = vec3(10.00000, 10.00000, 10.00000);
	vec3 n_in2p1 = vec3(0.00000, 0.00000, 0.00000);
	vec3 n_out2p0 = vec3(1.0) - (vec3(1.0) - n_in2p0) * (vec3(1.0) - n_in2p1);

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -45.3001, 297.651 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 4 )
nodes/fragment/2/position = Vector2( 100, 140 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Tepbackground" type="Sprite" parent="."]
position = Vector2( 613, 350.75 )
scale = Vector2( 1.95208, 1.83943 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
self_modulate = Color( 0.490196, 0.490196, 0.490196, 0.941176 )
light_mask = 0
material = SubResource( 3 )
margin_left = 128.0
margin_top = 128.0
margin_right = 1104.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 601, 79 )

[node name="LoginButton" type="MenuButton" parent="."]
margin_left = 320.0
margin_top = 144.0
margin_right = 430.0
margin_bottom = 192.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
shortcut_in_tooltip = false
pressed = true
text = "LogIn"
clip_text = true
expand_icon = true

[node name="SignUpButton" type="MenuButton" parent="."]
margin_left = 728.0
margin_top = 144.0
margin_right = 888.0
margin_bottom = 192.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Sign Up"
clip_text = true
expand_icon = true

[node name="LoginLine" type="Line2D" parent="."]
visible = false
position = Vector2( -116, 260 )
points = PoolVector2Array( 244, -52, 708, -52 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="CenterLine" type="Line2D" parent="."]
position = Vector2( 211, 182 )
points = PoolVector2Array( 381, -54, 381, 26 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="SignUpLine" type="Line2D" parent="."]
position = Vector2( 226, 256 )
points = PoolVector2Array( 366, -48, 878, -48 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="Login" parent="." instance=ExtResource( 4 )]
position = Vector2( 448, 272 )

[node name="SignUp" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 448, 272 )

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 495.0
margin_top = 421.0
margin_right = 641.0
margin_bottom = 485.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Login"

[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="SignUpButton" to="." method="_on_SignUpButton_pressed"]
